--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
     <header class="main-header">
       <div class="container header-container">
         <nav class="main-nav">
-          <a class="web-logo" href=""
-            >Web<span class="studio-logo">Studio</span></a
-          >
+          <a class="web-logo" href="./index.html"
+            >Web<span class="studio-logo">Studio</span>
+          </a>
           <ul class="list-navigation">
             <li class="item">
-              <a class="item-navigation" href="./index.html">Studio</a>
+              <a class="item-navigation underlining" href="./index.html"
+                >Studio</a
+              >
             </li>
             <li class="item">
               <a class="item-navigation" href="">Portfolio</a>
@@ -41,13 +43,13 @@
           <ul class="contacts-information">
             <li>
               <a class="contacts" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+                >info@devstudio.com
+              </a>
             </li>
             <li>
               <a class="contacts" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+                >+11 (000) 111-11-11
+              </a>
             </li>
           </ul>
         </address>
@@ -67,6 +69,11 @@
           <h2 class="section-one visually-hidden">Section 1</h2>
           <ul class="our-feature">
             <li class="main-feature">
+              <div class="features-icon-container">
+                <svg class="features-icon" wight="64" height="64">
+                  <use href="images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="features-header">Strategy</h3>
               <p class="about-features">
                 Our goal is to identify the business problem to walk away with
@@ -74,6 +81,11 @@
               </p>
             </li>
             <li class="main-feature">
+              <div class="features-icon-container">
+                <svg class="features-icon" wight="64" height="64">
+                  <use href="images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="features-header">Punctuality</h3>
               <p class="about-features">
                 Bring the key message to the brand's audience for the best price
@@ -81,6 +93,11 @@
               </p>
             </li>
             <li class="main-feature">
+              <div class="features-icon-container">
+                <svg class="features-icon" wight="64" height="64">
+                  <use href="images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="features-header">Diligence</h3>
               <p class="about-features">
                 Research and confirm brands that present the strongest digital
@@ -88,6 +105,11 @@
               </p>
             </li>
             <li class="main-feature">
+              <div class="features-icon-container">
+                <svg class="features-icon" wight="64" height="64">
+                  <use href="images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="features-header">Technologies</h3>
               <p class="about-features">
                 Design practice focused on digital experiences. We bring forth a
@@ -102,6 +124,7 @@
         <div class="container team-container">
           <h2 class="our-team-title">Our Team</h2>
           <ul class="list-team">
+            <!-- ========== TEAM-MARK-GUERRERO ============ -->
             <li class="team-card">
               <img
                 class="team-img-list"
@@ -113,8 +136,39 @@
               <div class="team-list-text-box">
                 <h3 class="header-card">Mark Guerrero</h3>
                 <p class="job-title">Product Designer</p>
+                <ul class="team-social">
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
+            <!-- ============ TEAM_TOM-FORD ============ -->
             <li class="team-card">
               <img
                 class="team-img-list"
@@ -126,8 +180,39 @@
               <div class="team-list-text-box">
                 <h3 class="header-card">Tom Ford</h3>
                 <p class="job-title">Frontend Developer</p>
+                <ul class="team-social">
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
+            <!-- ============ TEAM_CAMILA-GARCIA ============ -->
             <li class="team-card">
               <img
                 class="team-img-list"
@@ -139,8 +224,39 @@
               <div class="team-list-text-box">
                 <h3 class="header-card">Camila Garcia</h3>
                 <p class="job-title">Marketing</p>
+                <ul class="team-social">
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
+            <!-- ============ TEAM_DANIEL-WILSON ============ -->
             <li class="team-card">
               <img
                 class="team-img-list"
@@ -152,6 +268,36 @@
               <div class="team-list-text-box">
                 <h3 class="header-card">Daniel Wilson</h3>
                 <p class="job-title">UI Designer</p>
+                <ul class="team-social">
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -163,72 +309,114 @@
           <h2 class="title-portfolio">Our Portfolio</h2>
           <ul class="list-portfolio">
             <li class="some-portfolio">
-              <img
-                src="./images/our-portfolio/banking-app.jpg"
-                alt="banking app"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-overlay-box">
+                <img
+                  src="./images/our-portfolio/banking-app.jpg"
+                  alt="banking app"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card-boarder">
                 <h3 class="header-portfolio">Banking App</h3>
                 <p class="classification">App</p>
               </div>
             </li>
             <li class="some-portfolio">
-              <img
-                src="./images/our-portfolio/cashless-payment.jpg"
-                alt="cashless payment"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-overlay-box">
+                <img
+                  src="./images/our-portfolio/cashless-payment.jpg"
+                  alt="cashless payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card-boarder">
                 <h3 class="header-portfolio">Cashless Payment</h3>
                 <p class="classification">Marketing</p>
               </div>
             </li>
             <li class="some-portfolio">
-              <img
-                src="./images/our-portfolio/meditation-app.jpg"
-                alt="maditation app"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-overlay-box">
+                <img
+                  src="./images/our-portfolio/meditation-app.jpg"
+                  alt="maditation app"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card-boarder">
                 <h3 class="header-portfolio">Meditation App</h3>
                 <p class="classification">App</p>
               </div>
             </li>
             <li class="some-portfolio">
-              <img
-                src="./images/our-portfolio/taxi-service.jpg"
-                alt="taxi service"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-overlay-box">
+                <img
+                  src="./images/our-portfolio/taxi-service.jpg"
+                  alt="taxi service"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card-boarder">
                 <h3 class="header-portfolio">Taxi Service</h3>
                 <p class="classification">Marketing</p>
               </div>
             </li>
             <li class="some-portfolio">
-              <img
-                src="./images/our-portfolio/screen-illustrations.jpg"
-                alt="screen illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-overlay-box">
+                <img
+                  src="./images/our-portfolio/screen-illustrations.jpg"
+                  alt="screen illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card-boarder">
                 <h3 class="header-portfolio">Screen Illustrations</h3>
                 <p class="classification">Design</p>
               </div>
             </li>
             <li class="some-portfolio">
-              <img
-                src="./images/our-portfolio/online-courses.jpg"
-                alt="online courses"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-overlay-box">
+                <img
+                  src="./images/our-portfolio/online-courses.jpg"
+                  alt="online courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card-boarder">
                 <h3 class="header-portfolio">Online Courses</h3>
                 <p class="classification">Marketing</p>
@@ -240,14 +428,49 @@
     </main>
     <!-- ==========FOOTER---------- -->
     <footer class="footer">
-      <div class="container">
-        <a class="footer-web-logo" href="./index.html"
-          >Web<span class="footer-studio-logo">Studio</span></a
-        >
-        <p class="tagline">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-logo-container">
+          <a class="footer-web-logo" href="./index.html"
+            >Web<span class="footer-studio-logo">Studio</span></a
+          >
+          <p class="tagline">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social-media-part">
+          <p class="footer-social-media-part-text">Social media</p>
+          <ul class="footer-social-list">
+            <li class="footer-social-list-item">
+              <a class="footer-social-list-link" href="#">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-item">
+              <a class="footer-social-list-link" href="#">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-item">
+              <a class="footer-social-list-link" href="#">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-item">
+              <a class="footer-social-list-link" href="#">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
