--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <ul class="our-feature">
             <li class="main-feature">
               <div class="features-icon-container">
-                <svg class="features-icon" wight="64" height="64">
+                <svg class="features-icon" width="64" height="64">
                   <use href="images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
@@ -82,7 +82,7 @@
             </li>
             <li class="main-feature">
               <div class="features-icon-container">
-                <svg class="features-icon" wight="64" height="64">
+                <svg class="features-icon" width="64" height="64">
                   <use href="images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
@@ -94,7 +94,7 @@
             </li>
             <li class="main-feature">
               <div class="features-icon-container">
-                <svg class="features-icon" wight="64" height="64">
+                <svg class="features-icon" width="64" height="64">
                   <use href="images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
@@ -106,7 +106,7 @@
             </li>
             <li class="main-feature">
               <div class="features-icon-container">
-                <svg class="features-icon" wight="64" height="64">
+                <svg class="features-icon" width="64" height="64">
                   <use href="images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
