--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <li class="main-feature">
               <div class="features-icon-container">
                 <svg class="features-icon" width="64" height="64">
-                  <use href="images/icons.svg#icon-antenna-1"></use>
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
               <h3 class="features-header">Strategy</h3>
@@ -83,7 +83,7 @@
             <li class="main-feature">
               <div class="features-icon-container">
                 <svg class="features-icon" width="64" height="64">
-                  <use href="images/icons.svg#icon-clock-1"></use>
+                  <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
               <h3 class="features-header">Punctuality</h3>
@@ -95,7 +95,7 @@
             <li class="main-feature">
               <div class="features-icon-container">
                 <svg class="features-icon" width="64" height="64">
-                  <use href="images/icons.svg#icon-diagram-1"></use>
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <h3 class="features-header">Diligence</h3>
@@ -107,7 +107,7 @@
             <li class="main-feature">
               <div class="features-icon-container">
                 <svg class="features-icon" width="64" height="64">
-                  <use href="images/icons.svg#icon-astronaut-1"></use>
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="features-header">Technologies</h3>
